@@ -26,10 +26,10 @@ version		:= $(shell echo $(full_version) | sed -e 's/[~+-].*//g')
 major           := $(shell echo $(version) | sed -e 's/\..*//g')
 revision	:= $(shell echo $(full_version) | sed -e 's/^[^+-]*//g')
 
-#SVN		:= http://svn.freebsd.org/base/release/$(version).0
-#SVN		:= http://svn.freebsd.org/base/releng/$(version)
-SVN		:= http://svn.freebsd.org/base/stable/$(major)
-#SVN		:= http://svn.freebsd.org/base/head
+#SVN		:= https://svn0.us-west.freebsd.org/base/release/$(version).0
+#SVN		:= https://svn0.us-west.freebsd.org/base/releng/$(version)
+SVN		:= https://svn0.us-west.freebsd.org/base/stable/$(major)
+#SVN		:= https://svn0.us-west.freebsd.org/base/head
 
 SOURCE = freebsd-smbfs
 ORIGDIR = $(SOURCE)-$(tar_version)
